# ar-mintin-cli

./: Cargo.toml  README.md
src/: args.rs  cli.rs  dest.rs  main.rs
