[package]
name = "ar-mintin"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ar-mintin = { git = "https://github.com/rauba-code/ar-mintin" }
crossterm = "0.23"
clap = { version = "3.1", features = ["derive"] }
ctrlc = "3.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
ar-mintin-webapi = { git = "https://github.com/rauba-code/ar-mintin-webapi" }
