[package]
name = "ar-mintin"
version = "0.4.3"
edition = "2021"

[dependencies]
ar-mintin = { git = "https://github.com/rauba-code/ar-mintin" }
crossterm = "0.23"
clap = { version = "3.1", features = ["derive"] }
ctrlc = "3.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
ar-mintin-webapi = { git = "https://github.com/rauba-code/ar-mintin-webapi" }
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"


